# copilot-metrics-otel-dashboard

./: .env.example  .funcignore  .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  azure.yaml  function_app.py  host.json  pyproject.toml
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/agents/: factchecker.agent.md  zenn-reviewer.agent.md  zenn-writer.agent.md
.github/instructions/: infrastructure.instructions.md  python-httpx.instructions.md  react-typescript.instructions.md  zenn-article.instructions.md
.github/prompts/: fix-ai-style.prompt.md  full-review.prompt.md  sns-post.prompt.md
.github/skills/copilot-metrics-api/: SKILL.md
.github/skills/zenn-factcheck/: SKILL.md
.github/skills/zenn-writing-style/: SKILL.md
articles/: copilot-metrics-dashboard.md
dashboard/: package-lock.json  package.json  server.js
dashboard/public/: runtime-config.json
dashboard/scripts/: prepare-deploy.mjs
dashboard/src/: App.css  App.tsx  dataLoader.ts  index.css  types.ts  utils.ts
dashboard/src/components/: AgentAdoptionOverview.tsx  CloudAgentActivityChart.tsx  (+7 more)
images/: architecture.drawio
infra/: main.bicep  main.json  main.parameters.json
infra/modules/: appserviceplan.bicep  cosmos.bicep  functionapp.bicep  keyvault.bicep  monitoring.bicep  rbac.bicep  resource-group.bicep  staticwebapp.bicep  storage.bicep  webapp.bicep
src/: fetch_metrics.py  generate_mock.py  ingestion_runtime.py  transform.py
tests/: test_fetch_metrics.py  test_function_app.py  test_generate_mock.py  test_ingestion_runtime.py  test_transform.py
